--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -659,10 +659,9 @@ img.imgSonido {
     color: #012840;
 }
 .avatar {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
-    border: 5px solid #fff; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 .avatar-container {
@@ -1010,7 +1009,7 @@ nav {
 
 .menu-top {
   width: 100%;
-  background-color: #333;
+  background-color: rgba(51, 51, 51, 0);
   color: #fff;
   padding: 20px 0;
 }
@@ -1020,18 +1019,21 @@ nav {
   padding: 0;
 }
 .menu-top ul li {
-  margin: 10px 0;
+  margin: 90% 0% 0% 0%;
+
 }
-.menu-top ul li a {
+.menu-top ul li  {
   text-decoration: none;
-  color: #fff;
+  color: rgb(0, 0, 0);
   padding: 10px 20px;
   display: block;
   border-radius: 4px;
   transition: background 0.3s;
+  cursor: pointer;
+  border-radius: 15px;
 }
-.menu-top ul li a:hover {
-  background-color: #575757;
+.menu-top ul :hover {
+  background-color: #ff9e1f;
 }
 .menu-top .dropdown {
   cursor: pointer;
@@ -1044,7 +1046,7 @@ nav {
   display: block;
 }
 .menu-top .dropdown.open > a {
-  background-color: #444;
+    background-color: #ff9e1f;
 }
 
 @media (max-width: 768px) {
