--- a/PROYECTO-MJC memoorize/multijugador/sala/estructura/assets/styles.css
+++ b/PROYECTO-MJC memoorize/multijugador/sala/estructura/assets/styles.css
@@ -307,12 +307,16 @@ body {
     position: absolute;
     width: 103%;
     height: 103%;
-    flex-shrink: 0; 
+    flex-shrink: 0;
     border-radius: 50%;
     background: radial-gradient(circle, rgb(214, 214, 16, 0.4) 0%, rgba(16, 137, 250, 0.416) 100%);
-    box-shadow: 0 0 25px rgb(255, 166, 0), inset 0 0 15px rgb(0, 255, 76), 0 0 40px rgba(0, 255, 255, 0.7); /* Luz constante */
-    z-index: -1;
+    box-shadow: 0 0 25px rgb(255, 166, 0), inset 0 0 15px rgb(0, 255, 76), 0 0 40px rgba(0, 255, 255, 0.7);
+    /*Luzconstante*/z-index: -1;
     transition: box-shadow 0.3s ease;
+    -webkit-transition: box-shadow 0.3s ease;
+    -moz-transition: box-shadow 0.3s ease;
+    -ms-transition: box-shadow 0.3s ease;
+    -o-transition: box-shadow 0.3s ease;
 }
 
 /* Estilo general de luces LED constantes */
