--- a/PROYECTO-MJC memoorize/multijugador/sala/estructura/assets/styles.css
+++ b/PROYECTO-MJC memoorize/multijugador/sala/estructura/assets/styles.css
@@ -216,7 +216,7 @@ body {
                  6px 6px 0px #8b4513;
     position: relative;
     padding: 0px;
-    left: 5%;
+    left: 8%;
     animation: vanishIn 1s ease-in-out;
     letter-spacing: 2px; /* Espaciado entre letras para alargar el texto */
     white-space: nowrap; /* Evita que el texto se baje a una nueva línea */
@@ -295,7 +295,7 @@ body {
     bottom: 0;
     top: 0%;
     left: 0;
-    margin-left: 10%;
+    margin-left: 18%;
     justify-content: center;
     align-items: center;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
@@ -578,4 +578,11 @@ h2 {
     .avatar-name {
         font-size: 0.8em;
     }
+}
+
+img {
+    width: 300px;
+    height: auto;
+    display: block;
+    margin: 0 auto;
 }
