--- a/PROYECTO-MJC memoorize/views/principal.html
+++ b/PROYECTO-MJC memoorize/views/principal.html
@@ -26,7 +26,7 @@
         
         <img src="../img/logo/aqua-Memorize.png" alt="Logo del Juego" class="logo"> 
         <button class="button2" href="../views/bar.html" onclick="createBubbles(event)">
-            <h3 class="btnTex">JUGAR</h3>  
+            <h3 id="btnTex"></h3>
             <div class="bubbles"></div> <!-- Contenedor de burbujas -->
         </button>
     </div>
