--- a/PROYECTO-MJC memoorize/style/principal.css
+++ b/PROYECTO-MJC memoorize/style/principal.css
@@ -2,7 +2,7 @@ body {
     background-image: url(../img/fondo4.gif);
     background-repeat: no-repeat;
     background-size: cover;
-    
+    font-family: 'Pirata One', cursive; 
     background-attachment: fixed;
     overflow: hidden;
     animation: puffIn 1s ease-in-out
@@ -88,21 +88,25 @@ body {
     transform: scale(1.1);
     background-color: rgba(255, 255, 255, 0); 
 }
-.welcome-message {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.8);
-    color: #fff;
-    padding: 20px 40px;
-    border-radius: 10px;
-    font-family: 'Pacifico', cursive;
-    font-size: 24px;
-    text-align: center;
-    opacity: 0;
-    animation: fadeIn 1s forwards;
-    z-index: 20;
+h3 {
+    font-size: 4.5em;
+    text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc, 0 0 30px #00ffcc;
+    letter-spacing: 2px; /* Espaciado entre letras para alargar el texto */
+    white-space: nowrap; /* Evita que el texto se baje a una nueva línea */
+    font-family: 'Pirata One', cursive; 
+    display: inline-block; /* Asegura que el texto ocupe solo el espacio necesario */
+    margin-bottom: 0px;
+}
+#btnTex::after {
+    content: "";
+    
+    animation: blink 0.5s step-start infinite;
+}
+
+@keyframes blink {
+    50% {
+        opacity: 0;
+    }
 }
 @keyframes fadeIn {
     from {
