--- a/PROYECTO-MJC memoorize/juegos/quiz/niveles/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/quiz/niveles/css/style.css
@@ -226,5 +226,96 @@ body{
     padding: 0px;
 }
 @media (max-width: 768px) {
-    
+    body {
+        background-size: cover; 
+    }
+
+    .imgLogo {
+        width: 150px;
+        height: 150px;
+        left: 20%; 
+    }
+
+    .conteinerJuego {
+        width: 350px; 
+        
+        right: 9px;
+        margin: 10px ; 
+    }
+
+    .imagenFondo {
+        object-fit: contain; 
+    }
+
+    .main-container {
+        flex-direction: column;
+        gap: 5px; 
+        padding-top: 1vh;
+    }
+
+    .fila {
+        gap: 2px;
+    }
+
+    .square {
+        width: 60px; 
+        height: 60px;
+        font-size: 20px; 
+    }
+
+    .result {
+        font-size: 18px; 
+    }
+
+    .button {
+        width: 60px;
+        height: 60px;
+        font-size: 16px;
+        border-radius: 15%; 
+    }
+
+    #contador {
+        font-size: 1.5em; 
+        padding-left: 40px; 
+    }
+
+    .modal-content {
+        width: 90%; 
+        padding: 10px; 
+    }
+
+    .text {
+        font-size: 16px;
+    }
+
+    .menu {
+        padding: 5px; 
+        right: 23px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+    }
+
+    .imgSonido {
+        width: 30px; 
+    }
+
+    .menu-title {
+        font-size: 3rem; 
+        
+        text-shadow: 2px 2px 0px #000000, 4px 4px 0px #8b4513;
+    }
+
+    .back-button {
+        bottom: 85%; 
+        left: 5%;
+    }
+
+    .back-button-img {
+        width: 15%; 
+        height: auto;
+    }
+
+    .modal-footer .btn-secondary {
+        font-size: 14px; 
+        padding: 6px 6px;
+    }
 }
